build: update Makefile

--- a/023_build_an_application/Makefile
+++ b/023_build_an_application/Makefile
@@ -12,10 +12,18 @@ ARCH_LIST := amd64 arm64
 BINARY_NAMES := $(foreach os,$(OS_LIST),$(foreach arch,$(ARCH_LIST),$(BINARY_NAME)_$(os)_$(arch)))
 BINARY_PATHS := $(foreach binary,$(BINARY_NAMES),$(OUTPUT_DIR)/$(binary))
 
+
 .PHONY: build/matrix
 build/matrix: $(BINARY_PATHS) build
 $(OUTPUT_DIR)/%:
 	@$(MAKE) build OUTPUT_DIR=$(dir $@) BINARY_NAME=$(notdir $@) OS=$(word 2,$(subst _, ,$(notdir $@))) ARCH=$(word 3,$(subst _, ,$(notdir $@)))
+
+
+.PHONY: matrix/production/deploy
+matrix/production/deploy: $(BINARY_PATHS) production/deploy
+$(OUTPUT_DIR)/%:
+	@$(MAKE) production/deploy OUTPUT_DIR=$(dir $@) BINARY_NAME=$(notdir $@) OS=$(word 2,$(subst _, ,$(notdir $@))) ARCH=$(word 3,$(subst _, ,$(notdir $@)))
+
 
 # Change the binary name depending on the OS
 ifeq "$(OS)" "windows"
