--- a/023_build_an_application/Makefile
+++ b/023_build_an_application/Makefile
@@ -136,7 +136,9 @@ push: confirm audit no-dirty
 .PHONY: production/deploy
 production/deploy: audit no-dirty
 	GOOS=${OS} GOARCH=${ARCH} go build -ldflags='-s' -o=${OUTPUT_DIR}/bin/${BINARY_NAME} ${MAIN_PACKAGE_PATH}
-	ifeq ("${OS}", "darwin")
-		upx --best --lzma --force-macos ${OUTPUT_DIR}/bin/${BINARY_NAME}
-	endif
+
+	@if [ "${OS}" = "darwin" ]; then \
+		upx --best --lzma --force-macos ${OUTPUT_DIR}/bin/${BINARY_NAME}; \
+	fi
+	
 	upx --best --lzma ${OUTPUT_DIR}/bin/${BINARY_NAME}
