build: update Makefile

--- a/023_build_an_application/Makefile
+++ b/023_build_an_application/Makefile
@@ -5,7 +5,7 @@
 # ==================================================================================== #
 
 # Sets the path to the main package, binary name, and output directory
-MAIN_PACKAGE_PATH := .
+MAIN_PACKAGE_PATH := ./cmd/webserver
 BINARY_NAME := http-server
 OUTPUT_DIR := .
 
