--- a/023_build_an_application/Makefile
+++ b/023_build_an_application/Makefile
@@ -49,8 +49,8 @@ endef
 
 # compress_upx: Macro to compress the binary using UPX
 define compress_upx
-	@echo "[*] Compressing $(1) using UPX for target OS: $(2)"
-	@if [ "$(2)" = "darwin" ]; then \
+	echo "[*] Compressing $(1) using UPX for target OS: $(2)"
+	if [ "$(2)" = "darwin" ]; then \
 		upx --best --lzma --force-macos $(1) || (echo "[*] \033[31m\033[1mUPX failed, skipping...\033[0m"; true); \
 	else \
 		upx --best --lzma $(1) || (echo "[*] \033[31m\033[1mUPX failed, skipping...\033[0m"; true); \
@@ -60,8 +60,8 @@ endef
 
 # build_and_pack: Macro to build and pack a binary
 define build_and_pack
-	@mkdir -p $(dir $1)
-	@binary_name=$$(basename $1); \
+	mkdir -p $(dir $1)
+	binary_name=$$(basename $1); \
 	noext_name=$${binary_name%%.*}; \
 	os=$$(echo $$noext_name | cut -d'_' -f2); \
 	arch=$$(echo $$noext_name | cut -d'_' -f3); \
@@ -72,13 +72,18 @@ define build_and_pack
 	fi; \
 	echo "[+] - [$$os/$$arch] - Packing $$binary_name ($$package_path/$(MAIN_GO_FILE))..."; \
 	GOOS=$$os GOARCH=$$arch go build -ldflags='-s' -o=$1 $$package_path/$(MAIN_GO_FILE); \
-	$(call compress_upx,$1)
+	echo "[*] Compressing $$binary_name using UPX for target OS: $$os"; \
+	if [ "$$os" = "darwin" ]; then \
+		upx --best --lzma --force-macos $1 || (echo "[*] \033[31m\033[1mUPX failed, skipping...\033[0m"; true); \
+	else \
+		upx --best --lzma $1 || (echo "[*] \033[31m\033[1mUPX failed, skipping...\033[0m"; true); \
+	fi
 endef
 
 
 # Pattern rule for matrix builds
 $(OUTPUT_DIR)/%:
-	$(call build_and_pack,$@)
+	@$(call build_and_pack,$@)
 
 
 # Recipe for checking the project root
@@ -115,16 +120,14 @@ run-webserver: _check-root ## Run the webserver
 production.pack-webserver: ## Build and pack the webserver binary
 	@echo "[*] Building $(BINARY_NAME_WEBSERVER) for ${OS}/${ARCH}"
 	$(call go_build,$(OS),$(ARCH),$(OUTPUT_DIR)/$(BINARY_NAME_WEBSERVER)$(EXT),$(MAIN_PACKAGE_PATH_WEBSERVER))
-	$(call compress_upx,$(OUTPUT_DIR)/$(BINARY_NAME_WEBSERVER)$(EXT))
-
+	@$(call compress_upx,$(OUTPUT_DIR)/$(BINARY_NAME_WEBSERVER)$(EXT),$(OS))
 
 # Recipe for building and packing the CLI
 .DELETE_ON_ERROR:
 production.pack-cli: ## Build and pack the CLI binary
 	@echo "[*] Building $(BINARY_NAME_CLI) for ${OS}/${ARCH}"
 	$(call go_build,$(OS),$(ARCH),$(OUTPUT_DIR)/$(BINARY_NAME_CLI)$(EXT),$(MAIN_PACKAGE_PATH_CLI))
-	$(call compress_upx,$(OUTPUT_DIR)/$(BINARY_NAME_CLI)$(EXT))
-
+	@$(call compress_upx,$(OUTPUT_DIR)/$(BINARY_NAME_CLI)$(EXT),$(OS))
 
 # Recipe for building and packing the CLI and webserver for a specific OS/ARCH
 .DELETE_ON_ERROR:
